feat: increase access use case
