# src/shared/infra/http/routes/accesses-routes.ts
@@ -1,0 +1,10 @@
+import { IncreseAcessController } from "@modules/access/use-cases/increase-access/increase-access-controller";
+import { Router } from "express";
+
+const accessesRoutes = Router();
+
+const increseAcessController = new IncreseAcessController();
+
+accessesRoutes.post("/", increseAcessController.handle);
+
+export { accessesRoutes };
