# src/shared/infra/http/routes/index.ts
@@ -1,9 +1,10 @@
 import { Router } from "express";
-
+import { accessesRoutes } from "./accesses-routes";
 import { usersRoutes } from "./users-routes";
 
 const router = Router();
 
 router.use("/users", usersRoutes);
+router.use("/accesses", accessesRoutes);
 
 export { router };
